--- a/Styles/_common.css
+++ b/Styles/_common.css
@@ -6,6 +6,16 @@
     url("/Resources/fonts/D2Coding/D2Coding.ttf") format("truetype"),
     url("/Resources/fonts/D2Coding/D2Coding.eot") format("embedded-opentype");
 }
+@font-face {
+  font-family: "Nanum";
+  src: local("NanumGothicCoding"),
+    url("/Resources/fonts/Nanum/NanumGothicCoding.woff2") format("woff2"),
+    url("/Resources/fonts/Nanum/NanumGothicCoding.woff") format("woff"),
+    url("/Resources/fonts/Nanum/NanumGothicCoding.ttf") format("truetype"),
+    url("/Resources/fonts/Nanum/NanumGothicCoding.eot")
+      format("embedded-opentype");
+}
+
 html {
   font-size: 12px;
   padding: 0;
@@ -24,11 +34,20 @@ li {
   margin: 0;
   padding: 0;
 }
-h1 {
-  margin: 0;
+h1,
+h2,
+h3 {
   padding: 0;
+  margin: 0;
+  font-family: "D2Coding";
 }
-
+h4,
+h5,
+p {
+  padding: 0;
+  margin: 0;
+  font-family: "Nanum";
+}
 header {
   min-height: 30px;
   display: flex;
@@ -55,6 +74,9 @@ main {
 footer {
   min-height: 30px;
   background-color: rgb(33, 33, 33);
+  display: flex;
+  flex-direction: row;
+  padding: 0 10px;
 }
 
 /* 컬러값 */
@@ -69,10 +91,25 @@ footer {
 .green--bg {
   background-color: rgb(80, 190, 40);
 }
+
+.lightgray-bg {
+  background-color: rgb(60, 60, 60);
+}
+.black-bg {
+  background-color: rgb(0, 0, 0);
+}
+.darkgray {
+  color: darkgray;
+}
+.white {
+  color: #fff;
+}
+.black {
+  color: black;
+}
 .gray {
   color: rgb(174, 189, 189);
 }
-
 .highlight {
   color: rgb(132, 214, 206);
 }
